--- a/index.html
+++ b/index.html
@@ -94,8 +94,131 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
+    <!-- Embed Icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- Styles Css -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- ===== Header ===== -->
+    <header class="header">
+      <!-- Header top -->
+      <div class="header-top">
+        <div class="container box--row">
+          <a href="/" class="logo box--row">
+            <img src="./assets/images/logo.svg" alt="Lucy" /><span>Lucy</span>
+          </a>
+
+          <nav class="navbar">
+            <ul class="navbar__list box--row">
+              <li class="navbar__item">
+                <a
+                  href="/"
+                  class="navbar__link navbar__link--active"
+                  data-text="Home"
+                  >Home</a
+                >
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link" data-text="About">About</a>
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link" data-text="Services & Rates"
+                  >Services & Rates</a
+                >
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link" data-text="Reviews"
+                  >Reviews</a
+                >
+              </li>
+              <li class="navbar__item">
+                <a href="#!" class="navbar__link" data-text="Contacts us"
+                  >Contacts us</a
+                >
+              </li>
+            </ul>
+          </nav>
+
+          <a href="#!" class="btn sign-up__btn">Sign up</a>
+        </div>
+      </div>
+
+      <!-- Hero -->
+      <section class="hero">
+        <div class="container box--row">
+          <div class="hero__media">
+            <figure class="hero__images">
+              <img src="./assets/images/hero-1.png" alt="" class="hero__img" />
+              <img src="./assets/images/hero-2.png" alt="" class="hero__img" />
+            </figure>
+            <div class="hero-card">
+              <div class="hero-card__item box--row">
+                <figure>
+                  <img
+                    src="./assets/images/hero-s1.png"
+                    alt=""
+                    class="hero-card__img"
+                  />
+                </figure>
+                <div class="hero-card__content">
+                  <p class="hero-card__title">Pet Health</p>
+                  <div class="hero-card__line"></div>
+                  <div class="hero-card__line hero-card__line--short"></div>
+                </div>
+              </div>
+              <div class="hero-card__item box--row">
+                <figure>
+                  <img
+                    src="./assets/images/hero-s2.png"
+                    alt=""
+                    class="hero-card__img"
+                  />
+                </figure>
+                <div class="hero-card__content">
+                  <p class="hero-card__title">Pet care</p>
+                  <div class="hero-card__line"></div>
+                  <div class="hero-card__line hero-card__line--short"></div>
+                </div>
+              </div>
+            </div>
+            <img
+              src="./assets/images/union-1.png"
+              alt=""
+              class="hero-media__union"
+            />
+            <img
+              src="./assets/images/union-2.png"
+              alt=""
+              class="hero-media__union"
+            />
+          </div>
+
+          <section class="hero-content">
+            <h1 class="hero-content__heading">
+              Established & Trusted Pet Care Service
+            </h1>
+            <p class="hero-content__desc">
+              Discover a wide variety of Pawsitive services to choose from,
+              including daycare, private walks, office duty and spa.
+            </p>
+            <div class="hero-content__cta box--row">
+              <a href="#!" class="btn hero-content__btn box--row">
+                <span>Book a Meet</span>
+                <i class="fa-solid fa-chevron-right"></i>
+              </a>
+              <a href="#!" class="hero-content__link">Schedule a Call</a>
+            </div>
+          </section>
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
