--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <!-- Header top -->
       <div class="header-top">
         <div class="container box--row">
-          <a href="/" class="logo box--row">
+          <a href="/f8-htmlcss-04" class="logo box--row">
             <img src="./assets/images/logo.svg" alt="Lucy" /><span>Lucy</span>
           </a>
 
@@ -120,7 +120,7 @@
             <ul class="navbar__list box--row">
               <li class="navbar__item">
                 <a
-                  href="/"
+                  href="/f8-htmlcss-04"
                   class="navbar__link navbar__link--active"
                   data-text="Home"
                   >Home</a
@@ -220,5 +220,45 @@
         </div>
       </section>
     </header>
+
+    <main>
+      <!-- ===== About ===== -->
+      <section class="about">
+        <div class="container box--row">
+          <section class="about-content">
+            <p class="about-content__subtitle">// About //</p>
+            <h2 class="about-content__heading">Best Agency For Your Pet.</h2>
+            <p class="about-content__desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <div class="about-content__list">
+              <p class="about-content__item">Certified Groomer</p>
+              <p class="about-content__item">Animal Lover</p>
+              <p class="about-content__item">14+ Years Experience</p>
+              <p class="about-content__item">Pet Parent Of 3 Dogs</p>
+            </div>
+          </section>
+          <div class="about-media">
+            <img
+              src="./assets/images/about.png"
+              alt="Best Agency For Your Pet."
+              class="about__img"
+            />
+            <div class="about-media__box"></div>
+            <img
+              src="./assets/images/about-union.png"
+              alt=""
+              class="about-media__union"
+            />
+            <div class="about__card">
+              <p>20+</p>
+              <p>Years Experience</p>
+              <img src="./assets/images/about-icon.png" alt="" class="about__card-icon"/>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
