--- a/index.html
+++ b/index.html
@@ -254,9 +254,180 @@
             <div class="about__card">
               <p>20+</p>
               <p>Years Experience</p>
-              <img src="./assets/images/about-icon.png" alt="" class="about__card-icon"/>
+              <img
+                src="./assets/images/about-icon.png"
+                alt=""
+                class="about__card-icon"
+              />
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- ===== Features ===== -->
+      <section class="features">
+        <div class="container box--row">
+          <figure class="features__images">
+            <img
+              src="./assets/images/features.png"
+              alt=""
+              class="features__img"
+            />
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="9"
+              height="33"
+              viewBox="0 0 9 33"
+              fill="none"
+              class="features__vector-1"
+            >
+              <path
+                d="M6 1.5C5.83333 2.66667 5.8 5.4 7 7C8.5 9 8 10 5.5 11.5C3 13 3.5 15 5 17.5C6.5 20 5.5 20.5 3.5 22C1.5 23.5 1 24 3 26.5C4.6 28.5 3.33333 30.6667 2.5 31.5"
+                stroke="#F8F8F8"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="21"
+              height="36"
+              viewBox="0 0 21 36"
+              fill="none"
+              class="features__vector-2"
+            >
+              <path
+                d="M20 0C18.8333 0.166667 16.6 1.5 17 5.5C17.5 10.5 15 11.5 13 12C11 12.5 9.5 13 10 18.5C10.5 24 7 24.5 4.5 25C2 25.5 1 26.5 1.5 35"
+                stroke="#AE8459"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="56"
+              height="30"
+              viewBox="0 0 56 30"
+              fill="none"
+              class="features__vector-3"
+            >
+              <path
+                d="M55 1C54.5 1.83333 52.7 3.2 49.5 2C45.5 0.5 42.5 0.5 40.5 5C38.5 9.5 38 13 32 11C26 9 24.5 11 23.5 15C22.5 19 20.5 21.5 16 19.5C11.5 17.5 7 17.5 6 22C5 26.5 5 28.5 1.5 28"
+                stroke="#E08345"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="23"
+              height="26"
+              viewBox="0 0 23 26"
+              fill="none"
+              class="features__vector-4"
+            >
+              <path d="M0 3.5L23 0L14 25.5L0 3.5Z" fill="#3F97E4" />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="14"
+              height="16"
+              viewBox="0 0 14 16"
+              fill="none"
+              class="features__vector-5"
+            >
+              <path
+                d="M9.5 15L13 1L1 3.5L9.5 15Z"
+                stroke="white"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="125"
+              height="121"
+              viewBox="0 0 125 121"
+              fill="none"
+              class="features__vector-6"
+            >
+              <circle
+                cx="53.8125"
+                cy="53.8125"
+                r="53.8125"
+                transform="matrix(-1 0 0 1 124 12.958)"
+                stroke="#5992C3"
+                stroke-width="2"
+              />
+              <circle
+                cx="52.1042"
+                cy="52.1042"
+                r="52.1042"
+                transform="matrix(-1 0 0 1 114.604 8.6875)"
+                stroke="#5992C3"
+                stroke-width="2"
+              />
+              <circle
+                cx="52.1042"
+                cy="52.1042"
+                r="52.1042"
+                transform="matrix(-1 0 0 1 105.208 1)"
+                stroke="#5992C3"
+                stroke-width="2"
+              />
+            </svg>
+          </figure>
+
+          <section class="features__content">
+            <h2 class="features__heading">
+              Taking A Vacation? So Is Your Pet.
+            </h2>
+            <p class="features__desc">
+              We offer long-term and short-term boarding. Every dog has its own
+              private, spacious room and daily individual time in our large play
+              yard.
+            </p>
+            <div class="features-info">
+              <ul class="features-info__list box--row">
+                <li class="features-info__item active">
+                  <a href="#!" class="features-info__link box--row">
+                    <img src="./assets/images/features-icon-1.svg" alt="" />
+                    <span>Pet Boarding</span>
+                  </a>
+                </li>
+                <li class="features-info__item">
+                  <a href="#!" class="features-info__link box--row">
+                    <img src="./assets/images/features-icon-2.svg" alt="" />
+                    <span>Pet Daycare</span>
+                  </a>
+                </li>
+                <li class="features-info__item">
+                  <a href="#!" class="features-info__link box--row">
+                    <img src="./assets/images/features-icon-3.svg" alt="" />
+                    <span>Pet Transport</span>
+                  </a>
+                </li>
+              </ul>
+
+              <div class="features-info__wrapp-list">
+                <div class="features-info__wrapp-item">
+                  <p class="features-info__desc">
+                    While you're on holiday, here's where your furry friends
+                    will spend their time.
+                  </p>
+                  <a href="#!" class="features-info__wrapp-link">View more</a>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
       </section>
     </main>
