--- a/index.html
+++ b/index.html
@@ -430,6 +430,219 @@
           </section>
         </div>
       </section>
+
+      <!-- ===== Features ===== -->
+      <section class="services">
+        <div class="container">
+          <p class="services__subtitle">What we do for you?</p>
+          <h2 class="services__heading">Our Services</h2>
+
+          <div class="services__list box--row">
+            <div class="services__column">
+              <article class="services__item">
+                <h3 class="services__title">Puppy Sitting</h3>
+                <p class="services__desc">
+                  Helping your new pup to be a good boy or girl isn’t always
+                  easy, but we’re here to help.
+                </p>
+                <a href="#!" class="services__link">
+                  <span> Read More</span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="12"
+                    height="12"
+                    viewBox="0 0 12 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M3 9L9 3"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M4.125 3H9V7.875"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+              </article>
+
+              <article class="services__item">
+                <h3 class="services__title">Dog Walking</h3>
+                <p class="services__desc">
+                  Choose from a 30, 45, or 60-minute visit to give your pet
+                  their daily dose of fun-filled.
+                </p>
+                <a href="#!" class="services__link">
+                  <span> Read More</span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="12"
+                    height="12"
+                    viewBox="0 0 12 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M3 9L9 3"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M4.125 3H9V7.875"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+              </article>
+
+              <article class="services__item">
+                <h3 class="services__title">Pet Sitting</h3>
+                <p class="services__desc">
+                  While you’re away we can make sure your pet has all the food,
+                  water, exercise, and, of course.
+                </p>
+                <a href="#!" class="services__link">
+                  <span> Read More</span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="12"
+                    height="12"
+                    viewBox="0 0 12 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M3 9L9 3"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M4.125 3H9V7.875"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+              </article>
+            </div>
+
+            <div class="services__column">
+              <figure class="services__images">
+                <img
+                  src="./assets/images/services.png"
+                  alt=""
+                  class="services__img"
+                />
+                <div class="services__box"></div>
+              </figure>
+
+              <a href="#!" class="btn services__btn">View All Services</a>
+            </div>
+
+            <div class="services__column">
+              <article class="services__item">
+                <h3 class="services__title">Overnight Care</h3>
+                <p class="services__desc">
+                  If you’re away for the night, we can stay the night or stop by
+                  in the evening and morning.
+                </p>
+                <a href="#!" class="services__link">
+                  <span> Read More</span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="12"
+                    height="12"
+                    viewBox="0 0 12 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M3 9L9 3"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M4.125 3H9V7.875"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+              </article>
+
+              <article class="services__item">
+                <h3 class="services__title">Pet Taxi</h3>
+                <p class="services__desc">
+                  Does your pet need a lift to the groomers, vet, or dog park?
+                  We’ve got their tail covered.
+                </p>
+                <a href="#!" class="services__link">
+                  <span> Read More</span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="12"
+                    height="12"
+                    viewBox="0 0 12 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M3 9L9 3"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M4.125 3H9V7.875"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+              </article>
+
+              <article class="services__item">
+                <h3 class="services__title">Pet Medical Admin</h3>
+                <p class="services__desc">
+                  Our team of experienced professionals can help with everything
+                  from pills to injections.
+                </p>
+                <a href="#!" class="services__link">
+                  <span> Read More</span>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="12"
+                    height="12"
+                    viewBox="0 0 12 12"
+                    fill="none"
+                  >
+                    <path
+                      d="M3 9L9 3"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M4.125 3H9V7.875"
+                      stroke="#FF5B2E"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
