Add staff, pricing

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         </div>
       </section>
 
-      <!-- ===== Features ===== -->
+      <!-- ===== Services ===== -->
       <section class="services">
         <div class="container">
           <p class="services__subtitle">What we do for you?</p>
@@ -441,7 +441,7 @@
             <div class="services__column">
               <article class="services__item">
                 <h3 class="services__title">Puppy Sitting</h3>
-                <p class="services__desc">
+                <p class="services__desc line-clamp">
                   Helping your new pup to be a good boy or girl isn’t always
                   easy, but we’re here to help.
                 </p>
@@ -472,7 +472,7 @@
 
               <article class="services__item">
                 <h3 class="services__title">Dog Walking</h3>
-                <p class="services__desc">
+                <p class="services__desc line-clamp">
                   Choose from a 30, 45, or 60-minute visit to give your pet
                   their daily dose of fun-filled.
                 </p>
@@ -503,7 +503,7 @@
 
               <article class="services__item">
                 <h3 class="services__title">Pet Sitting</h3>
-                <p class="services__desc">
+                <p class="services__desc line-clamp">
                   While you’re away we can make sure your pet has all the food,
                   water, exercise, and, of course.
                 </p>
@@ -549,7 +549,7 @@
             <div class="services__column">
               <article class="services__item">
                 <h3 class="services__title">Overnight Care</h3>
-                <p class="services__desc">
+                <p class="services__desc line-clamp">
                   If you’re away for the night, we can stay the night or stop by
                   in the evening and morning.
                 </p>
@@ -580,7 +580,7 @@
 
               <article class="services__item">
                 <h3 class="services__title">Pet Taxi</h3>
-                <p class="services__desc">
+                <p class="services__desc line-clamp">
                   Does your pet need a lift to the groomers, vet, or dog park?
                   We’ve got their tail covered.
                 </p>
@@ -611,7 +611,7 @@
 
               <article class="services__item">
                 <h3 class="services__title">Pet Medical Admin</h3>
-                <p class="services__desc">
+                <p class="services__desc line-clamp">
                   Our team of experienced professionals can help with everything
                   from pills to injections.
                 </p>
@@ -639,6 +639,249 @@
                   </svg>
                 </a>
               </article>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ===== Staff ===== -->
+      <section class="staff">
+        <div class="container">
+          <p class="staff_subtitle">Pet Care Staff</p>
+          <h2 class="staff__heading">Meet Our Groomers</h2>
+          <div class="staff__list box--row">
+            <div class="staff__item">
+              <figure>
+                <img
+                  src="./assets/images/staff-1.png"
+                  alt=""
+                  class="staff__img"
+                />
+                <div class="staff__box"></div>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="270"
+                  height="113"
+                  viewBox="0 0 270 113"
+                  fill="none"
+                >
+                  <path
+                    d="M2 2C2 47.3641 24.6304 87.3631 59.0572 111M268 2C268 47.3641 245.37 87.3631 210.943 111"
+                    stroke="url(#paint0_linear_11_998)"
+                    stroke-width="4"
+                    stroke-linecap="round"
+                  />
+                  <defs>
+                    <linearGradient
+                      id="paint0_linear_11_998"
+                      x1="135"
+                      y1="2"
+                      x2="135"
+                      y2="111"
+                      gradientUnits="userSpaceOnUse"
+                    >
+                      <stop stop-color="#90CCFF" />
+                      <stop offset="1" stop-color="#90CCFF" stop-opacity="0" />
+                    </linearGradient>
+                  </defs>
+                </svg>
+              </figure>
+              <p class="staff__position">Pet Trainer</p>
+              <p class="staff__name">Meghan Samit</p>
+            </div>
+            <div class="staff__item">
+              <figure>
+                <img
+                  src="./assets/images/staff-2.png"
+                  alt=""
+                  class="staff__img"
+                />
+                <div class="staff__box"></div>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="270"
+                  height="113"
+                  viewBox="0 0 270 113"
+                  fill="none"
+                >
+                  <path
+                    d="M268 111C268 65.6359 245.37 25.6369 210.943 2M1.99999 111C1.99999 65.6359 24.6304 25.6369 59.0572 2"
+                    stroke="url(#paint0_linear_11_992)"
+                    stroke-width="4"
+                    stroke-linecap="round"
+                  />
+                  <defs>
+                    <linearGradient
+                      id="paint0_linear_11_992"
+                      x1="135"
+                      y1="111"
+                      x2="135"
+                      y2="2"
+                      gradientUnits="userSpaceOnUse"
+                    >
+                      <stop stop-color="#FF997E" />
+                      <stop offset="1" stop-color="#FF997E" stop-opacity="0" />
+                    </linearGradient>
+                  </defs>
+                </svg>
+              </figure>
+              <p class="staff__position">Veterinarian</p>
+              <p class="staff__name">Alissa Silva</p>
+            </div>
+            <div class="staff__item">
+              <figure>
+                <img
+                  src="./assets/images/staff-3.png"
+                  alt=""
+                  class="staff__img"
+                />
+                <div class="staff__box"></div>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="270"
+                  height="113"
+                  viewBox="0 0 270 113"
+                  fill="none"
+                >
+                  <path
+                    d="M2 2C2 47.3641 24.6304 87.3631 59.0572 111M268 2C268 47.3641 245.37 87.3631 210.943 111"
+                    stroke="url(#paint0_linear_11_980)"
+                    stroke-width="4"
+                    stroke-linecap="round"
+                  />
+                  <defs>
+                    <linearGradient
+                      id="paint0_linear_11_980"
+                      x1="135"
+                      y1="2"
+                      x2="135"
+                      y2="111"
+                      gradientUnits="userSpaceOnUse"
+                    >
+                      <stop stop-color="#FABF3E" />
+                      <stop offset="1" stop-color="#FABF3E" stop-opacity="0" />
+                    </linearGradient>
+                  </defs>
+                </svg>
+              </figure>
+              <p class="staff__position">Veterinarian</p>
+              <p class="staff__name">Cindy Harris</p>
+            </div>
+            <div class="staff__item">
+              <figure>
+                <img
+                  src="./assets/images/staff-4.png"
+                  alt=""
+                  class="staff__img"
+                />
+                <div class="staff__box"></div>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="270"
+                  height="113"
+                  viewBox="0 0 270 113"
+                  fill="none"
+                >
+                  <path
+                    d="M268 111C268 65.6359 245.37 25.6369 210.943 2M1.99999 111C1.99999 65.6359 24.6304 25.6369 59.0572 2"
+                    stroke="url(#paint0_linear_11_988)"
+                    stroke-width="4"
+                    stroke-linecap="round"
+                  />
+                  <defs>
+                    <linearGradient
+                      id="paint0_linear_11_988"
+                      x1="135"
+                      y1="111"
+                      x2="135"
+                      y2="2"
+                      gradientUnits="userSpaceOnUse"
+                    >
+                      <stop stop-color="#5BD6E2" />
+                      <stop offset="1" stop-color="#5BD6E2" stop-opacity="0" />
+                    </linearGradient>
+                  </defs>
+                </svg>
+              </figure>
+              <p class="staff__position">Animal Caretaker</p>
+              <p class="staff__name">Lucas Tony</p>
+            </div>
+          </div>
+          <a href="#!" class="btn staff__btn">View All Team</a>
+        </div>
+      </section>
+
+      <!-- ===== Pricing ===== -->
+      <section class="pricing">
+        <div class="container">
+          <h2 class="pricing__heading">The Best Choice</h2>
+          <p class="pricing__desc">
+            We offer long-term and short-term boarding. Every dog has its own
+            private, spacious room and daily individual time in our large play
+            yard.
+          </p>
+          <div class="pricing__date">
+            <button class="pricing__btn">
+              <span class="pricing__btn-month">Monthly</span>
+              <span class="pricing__btn-year">Yearly</span>
+            </button>
+            <img
+              src="./assets/images/pricing-sale.svg"
+              alt=""
+              class="pricing__img-sale"
+            />
+          </div>
+
+          <div class="pricing__list box--row">
+            <div class="pricing-item">
+              <p class="pricing-item__subtitle">Basic</p>
+              <p class="pricing-item__title">Day care</p>
+              <p class="pricing-item__number">$150</p>
+              <a href="#!" class="btn pricing-item__btn">Purchase Now</a>
+
+              <ul class="pricing-item__list">
+                <li class="pricing-item__untility">Single room</li>
+                <li class="pricing-item__untility">Socialist Exercise</li>
+                <li class="pricing-item__untility">Custom Meals</li>
+                <li class="pricing-item__untility">Spa and Grooming</li>
+                <li class="pricing-item__untility check-none">Excercise 2x</li>
+                <li class="pricing-item__untility check-none">Custom Meals</li>
+                <li class="pricing-item__untility check-none">Grooming 2x</li>
+              </ul>
+            </div>
+
+            <div class="pricing-item">
+              <p class="pricing-item__subtitle">Exclusive</p>
+              <p class="pricing-item__title">2X Care</p>
+              <p class="pricing-item__number">$199</p>
+              <a href="#!" class="btn pricing-item__btn">Purchase Now</a>
+
+              <ul class="pricing-item__list">
+                <li class="pricing-item__untility">Single room</li>
+                <li class="pricing-item__untility">Socialist Exercise</li>
+                <li class="pricing-item__untility">Custom Meals</li>
+                <li class="pricing-item__untility">Spa and Grooming</li>
+                <li class="pricing-item__untility check-none">Excercise 2x</li>
+                <li class="pricing-item__untility check-none">Custom Meals</li>
+                <li class="pricing-item__untility check-none">Grooming 2x</li>
+              </ul>
+            </div>
+
+            <div class="pricing-item">
+              <p class="pricing-item__subtitle">Platinum</p>
+              <p class="pricing-item__title">4X Care</p>
+              <p class="pricing-item__number">$299</p>
+              <a href="#!" class="btn pricing-item__btn">Purchase Now</a>
+
+              <ul class="pricing-item__list">
+                <li class="pricing-item__untility">Single room</li>
+                <li class="pricing-item__untility">Socialist Exercise</li>
+                <li class="pricing-item__untility">Custom Meals</li>
+                <li class="pricing-item__untility">Spa and Grooming</li>
+                <li class="pricing-item__untility">Excercise 2x</li>
+                <li class="pricing-item__untility">Custom Meals</li>
+                <li class="pricing-item__untility">Grooming 2x</li>
+              </ul>
             </div>
           </div>
         </div>
