--- a/index.html
+++ b/index.html
@@ -886,6 +886,50 @@
           </div>
         </div>
       </section>
+
+      <!-- ===== Reviews ===== -->
+      <section class="reviews">
+        <div class="container">
+          <div class="reviews__list">
+            <button class="reviews__previous">
+              <i class="fa-solid fa-arrow-left-long"></i>
+            </button>
+            <button class="reviews__next">
+              <i class="fa-solid fa-arrow-right-long"></i>
+            </button>
+
+            <div class="reviews__item box--row">
+              <figure>
+                <img
+                  src="./assets/images/reviews.svg"
+                  alt=""
+                  class="reviews__img"
+                />
+                <div class="reviews__box"></div>
+              </figure>
+
+              <section class="reviews__content">
+                <h2 class="reviews__heading">Our Reviews</h2>
+                <p class="reviews__desc">
+                  “It was very comforting to recieve a text and pics each day
+                  about our pets and how they were doing. It was also nice that
+                  my pets were in the comfortable environment of their own home
+                  and received playfull attention from our pet sitters as well.
+                  Thanks so much!”
+                </p>
+                <p class="reviews__name">Karla Deras</p>
+              </section>
+            </div>
+          </div>
+
+          <div class="reviews__controls">
+            <button class="review__controls-item active"></button>
+            <button class="review__controls-item"></button>
+            <button class="review__controls-item"></button>
+            <button class="review__controls-item"></button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
