--- a/index.html
+++ b/index.html
@@ -930,6 +930,78 @@
           </div>
         </div>
       </section>
+
+      <!-- ===== Blog ===== -->
+      <section class="blog">
+        <div class="container">
+          <section class="blog__header box--row">
+            <h2 class="blog__heading">Our Blog</h2>
+            <div class="blog__header-content">
+              <p class="blog__desc">
+                Stay up to date with the latest tech trands and news in the
+                pets.
+              </p>
+              <a href="#!" class="btn blog__btn">View All Blog</a>
+            </div>
+          </section>
+
+          <div class="blog__list box--row">
+            <article class="blog__item">
+              <div class="blog__images">
+                <p class="blog__date">21 june 2021</p>
+                <img
+                  src="./assets/images/blog-1.jpg"
+                  alt=""
+                  class="blog__img"
+                />
+              </div>
+              <h3 class="blog__title line-clamp">
+                Building Bonds and Trusting Relationships with Your Pets.
+              </h3>
+              <p class="blog__item-desc line-clamp">
+                There isn’t a relationship around that can survive without
+                trust. My relationship with my dog Peyton is deep...
+              </p>
+            </article>
+
+            <article class="blog__item">
+              <div class="blog__images">
+                <p class="blog__date">28 june 2021</p>
+                <img
+                  src="./assets/images/blog-2.jpg"
+                  alt=""
+                  class="blog__img"
+                />
+              </div>
+              <h3 class="blog__title line-clamp">
+                Celebrity pet photographer Grace Chon on taking ...
+              </h3>
+              <p class="blog__item-desc line-clamp">
+                Doting pet parents have a relentless need to constantly
+                photograph every adorable pet moment...
+              </p>
+            </article>
+
+            <article class="blog__item">
+              <div class="blog__images">
+                <p class="blog__date">10 july 2021</p>
+                <img
+                  src="./assets/images/blog-3.jpg"
+                  alt=""
+                  class="blog__img"
+                />
+              </div>
+              <h3 class="blog__title line-clamp">
+                5 Simple Tricks To Create A More Conscious ...
+              </h3>
+              <p class="blog__item-desc line-clamp">
+                It is easy to forget that animals are living creatures with a
+                beating heart.
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
