--- a/index.html
+++ b/index.html
@@ -1003,5 +1003,110 @@
         </div>
       </section>
     </main>
+
+    <!-- ===== Footer ===== -->
+    <footer class="footer box--row">
+      <div class="footer__left">
+        <a href="/f8-htmlcss-04" class="logo box--row">
+          <img src="./assets/images/logo.svg" alt="Lucy" /><span>Lucy</span>
+        </a>
+
+        <form action="" method="post" class="footer__form">
+          <input
+            type="email"
+            name="email"
+            placeholder="Enter your email"
+            pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
+            class="footer__input"
+            required
+          />
+          <button class="footer__submit">
+            <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </form>
+
+        <p class="footer__follow">Follow Us</p>
+        <div class="footer__social">
+          <a href="#!" class="footer_social-icon">
+            <i class="fa-brands fa-square-facebook"></i>
+          </a>
+          <a href="#!" class="footer_social-icon">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#!" class="footer_social-icon">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="#!" class="footer_social-icon">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+      </div>
+
+      <div class="footer__right">
+        <div class="footer__group">
+          <h3 class="footer__title">Explore</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#!" class="footer__link">About Us</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">Services</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">Our Team</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">Adopt Pet</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__group">
+          <h3 class="footer__title">Useful links</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#!" class="footer__link">FAQs</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">Shop</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">Privacy Policy</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">Terms of Use</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">Site Map</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__group">
+          <h3 class="footer__title">Contact Info</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="mailto:abc@gmail.com" class="footer__link"
+                >abc@gmail.com</a
+              >
+            </li>
+            <li class="footer__item">
+              <a href="tel:0800000000" class="footer__link">0 (800)-000-00-0</a>
+            </li>
+            <li class="footer__item">New York, NY, Rocawy 7</li>
+          </ul>
+        </div>
+
+        <div class="footer__group">
+          <h3 class="footer__title">Contact Info</h3>
+          <ul class="footer__list">
+            <li class="footer__item">Mon - Fri: 08.00 am - 20.00 pm</li>
+            <li class="footer__item">Saturday: 09.00 am - 20.00 pm</li>
+            <li class="footer__item">Sunday: We are Closed</li>
+          </ul>
+        </div>
+        <p class="footer__copyright">Copyright & Design By Uihut</p>
+      </div>
+    </footer>
   </body>
 </html>
